Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,12 @@ body {
   flex: 1 0 auto;
 }
 
+.textboxh1 {
+  display: flex;
+  height: 100px;
+  overflow: auto;
+}
+
 .headerLOGO {
   padding-left: 50px;
   font-size: x-large;
